# Soc-resilient-log-pipeline

./: .gitignore  Architecture_Compliance_Analysis.md  Cargo.toml  Data_Manipulation_Analysis.md  README.md  SOC_Pipeline_Diagram.html  SOC_Pipeline_Flow_Diagram.md  Simple_Flow_Diagram.md
src/: error.rs  lib.rs  working_soc_demo.rs
